--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "core-js": "^3.8.3",
@@ -14,6 +15,7 @@
   },
   "devDependencies": {
     "fibers": "^5.0.0",
+    "gh-pages": "^3.1.0",
     "sass": "^1.32.8",
     "sass-loader": "^10.1.1"
   }
